Updated js to support posts for all forms

--- a/RTForms/index.html
+++ b/RTForms/index.html
@@ -66,12 +66,6 @@
 				</div>
 			</div>
 		</nav>
-	<div class="bs-example">
-    <div class="alert alert-success hidden">
-        <a href="#" class="close" data-dismiss="alert">&times;</a>
-        <strong>Success! </strong><span></span>
-    </div>
-</div>
         <!-- Top content -->
         <div class="top-content">
         	
@@ -82,6 +76,12 @@
                     		<img src="assets/img/ebook2.png" alt="">
                     	</div>
                         <div class="col-sm-5 form-box">
+							<div class="bs-example">
+								<div class="alert alert-success hidden">
+									<a href="#" class="close" data-dismiss="alert">&times;</a>
+									<strong>Success! </strong><span></span>
+								</div>
+							</div>
                             <!-- *** LOGIN / SIGN UP***-->
                             <div id="page_login" class="hidden">
                                 <div class="form-top">
@@ -253,7 +253,7 @@
                                     </div>
                                 </div>
                                 <div class="form-bottom">
-                                    <form id="form_document" role="form" action="" method="post" class="registration-form">
+                                    <form id="form_document" role="form" action="scribflyadddocument.php" method="post" class="registration-form">
                                         <div class="form-group">
                                             <label class="sr-only" for="form-first-name">Case number</label>
                                             <input type="text" name="form-first-name" placeholder="Case number..." class="form-first-name form-control" id="form-first-name">
